[gd_scene load_steps=8 format=3 uid="uid://cv3u6287lia20"]

[ext_resource type="Script" path="res://scripts/ServerButton.gd" id="1_logne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6who"]
content_margin_left = 5.0
bg_color = Color(0.155861, 0.249317, 0.415358, 1)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.670588)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ou1t"]
content_margin_left = 5.0
bg_color = Color(0.233914, 0.356063, 0.572653, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndg8e"]
content_margin_left = 5.0
bg_color = Color(0.113073, 0.188487, 0.322544, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q4iab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6x3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fotkp"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
corner_radius_top_right = 10
corner_radius_bottom_left = 10

[node name="ServerButton" type="Button"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_b6who")
theme_override_styles/hover = SubResource("StyleBoxFlat_2ou1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ndg8e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q4iab")
text = "Server Name
Host:IP - Version"
alignment = 0
script = ExtResource("1_logne")

[node name="ServerTouchButton" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_e6x3v")

[node name="ConnectionIndicator" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.964
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.104004
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fotkp")
value = 100.0
show_percentage = false

[connection signal="pressed" from="." to="." method="_on_pressed"]
